[package]
name = "tide-logs-raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenvy = "0.15"
pretty_env_logger = "0.4.0"
serde.workspace = true
tide.workspace = true

tide-app = { path = "../tide-app" }
